# docops-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: API_SPEC.md  DOCKER_SETUP.md  TESTING_PLAN.md
frontend/: index.html
src/agents/: __init__.py  base.py  state.py  workflow.py
src/agents/action/: __init__.py
src/agents/analyst/: __init__.py  agent.py  anomaly.py  comparison.py  metrics.py  trends.py
src/agents/extraction/: __init__.py  agent.py  schemas.py  validator.py  vision.py
src/agents/ingestion/: __init__.py  agent.py  chunker.py  classifier.py  parser.py
src/agents/supervisor/: __init__.py  agent.py  state.py  tools.py
src/api/: dependencies.py  main.py
src/api/models/: __init__.py  analysis.py  document.py  extraction.py
src/api/routes/: analysis.py  approvals.py  documents.py  extraction.py
src/data/: __init__.py  generator.py  sample_invoices.json
src/models/: __init__.py  approval.py  document.py  extraction.py  settings.py
src/services/: approval.py  database.py  storage.py
src/tasks/: __init__.py  analyze.py  celery.py  process.py
src/ui/: main.py
src/ui/components/: __init__.py
src/ui/pages/: __init__.py  analysis.py  approvals.py  documents.py  upload.py
src/utils/: config.py  logging.py  observability.py
tests/: conftest.py
tests/agents/: test_extraction.py  test_ingestion.py  test_supervisor.py
